mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_extra_token.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 2 errors found

error: Expected newline after statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_extra_token.mux:2:12
   |
 2 | auto x = 5 }
   |            ^

error: Expected expression, found '}'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_extra_token.mux:2:12
   |
 2 | auto x = 5 }
   |            ^
